--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -79,6 +79,9 @@
 </head>
 
   <body>
+        <header>
+                <h1>Expedition</h1>
+            </header>
     <!-- Trailer Video Modal -->
     <div class="modal" id="trailer">
       <div class="modal-dialog">
