--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>hello all from sidebar</title>
+    <title>hello all from sidebar agin</title>
 
     <!-- Bootstrap 3 -->
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
